--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,9 @@ services:
     hostname: redis
     ports:
       - "6379:6379"
+  redis-insight:
+    image: redislabs/redisinsight
+    ports:
+      - "8001:8001"
+    links:
+      - "redis:redis"
