--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.6.21</kotlin.version>
+		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
 		<jacoco.version>0.8.7</jacoco.version>
 	</properties>
 	<dependencies>
@@ -95,6 +96,16 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-reactor</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
