--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
 						</goals>
 						<configuration>
 							<inputSpec>${project.basedir}/api-spec/pagopa-ecommerce-sessions-api.yaml</inputSpec>
-							<generatorName>spring</generatorName>
+							<generatorName>kotlin-spring</generatorName>
 							<library>spring-boot</library>
 							<modelNameSuffix>Dto</modelNameSuffix>
 							<generateApiTests>false</generateApiTests>
