--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     build: ./
     ports:
       - "8080:8080"
+    env_file: .env
     links:
       -   "redis:redis"
   redis:
@@ -11,3 +12,9 @@ services:
     hostname: redis
     ports:
       - "6379:6379"
+  redis-insight:
+    image: redislabs/redisinsight
+    ports:
+      - "8001:8001"
+    links:
+      - "redis:redis"
