--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 jwt.secret=${JWT_SECRET}
 spring.redis.host=${SPRING_REDIS_HOST}
 spring.redis.port=${SPRING_REDIS_PORT}
+
+management.endpoint.health.probes.enabled=true
