--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 jwt.secret=${JWT_SECRET}
-spring.redis.host=${SPRING_REDIS_HOST}
-spring.redis.port=${SPRING_REDIS_PORT}
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+spring.redis.password=${REDIS_PASSWORD}
 
 management.endpoint.health.probes.enabled=true
