--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.6.21</kotlin.version>
+		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
 		<jacoco.version>0.8.7</jacoco.version>
 	</properties>
 	<dependencies>
@@ -96,6 +97,16 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-reactor</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
@@ -104,6 +115,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>it.pagopa.sessionsservice.SessionsserviceApplication</mainClass>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
@@ -115,6 +129,9 @@
 					<compilerPlugins>
 						<plugin>spring</plugin>
 					</compilerPlugins>
+					<sourceDirs>
+						<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/kotlin</sourceDir>
+					</sourceDirs>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -136,7 +153,7 @@
 						</goals>
 						<configuration>
 							<inputSpec>${project.basedir}/api-spec/pagopa-ecommerce-sessions-api.yaml</inputSpec>
-							<generatorName>spring</generatorName>
+							<generatorName>kotlin-spring</generatorName>
 							<library>spring-boot</library>
 							<modelNameSuffix>Dto</modelNameSuffix>
 							<generateApiTests>false</generateApiTests>
