--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -29,6 +29,7 @@ steps:
         sonar.coverage.exclusions=**/config/*,**/*Mock*,**/model/*
         sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
         sonar.junit.reportPaths=target/surefire-reports/
+        sonar.jacoco.reportPath=target/jacoco.exec
   
   - task: Maven@3
     inputs:
