--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -28,8 +28,8 @@ steps:
         sonar.projectName=$(SONARCLOUD_PROJECT_NAME)
         sonar.coverage.exclusions=**/config/*,**/*Mock*,**/model/*
         sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
-        sonar.junit.reportPaths=target/surefire-reports/
-        sonar.jacoco.reportPath=target/jacoco.exec
+        sonar.junit.reportPaths=./target/surefire-reports/
+        sonar.jacoco.reportPath=./target/jacoco.exec
   
   - task: Maven@3
     inputs:
