--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
 					</compilerPlugins>
 					<sourceDirs>
 						<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/kotlin</sourceDir>
+						<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
 					</sourceDirs>
 				</configuration>
 				<dependencies>
@@ -199,6 +200,11 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco.version}</version>
+				<configuration>
+                    <excludes>
+                        <exclude>it/pagopa/generated/**</exclude>
+                    </excludes>
+                </configuration>
 				<executions>
 					<execution>
 						<id>jacoco-initialize</id>
