[CHK-426] Add unit tests (#14)
* refactor(misc): misc ide suggestions

* refactor(service): begin transition to coroutine-based reactive operators

* refactor(coroutines): switch to `kotlin-spring` openapi generator

* fix(compile): add missing directives to kotlin+spring maven plugins

* test(sessionservice): add tests for `SessionsService`

* test(emailvalidator): add tests for `EmailValidator`

* test(rptid): add tests for `RptId`

* test(sessiondata): add tests for `SessionData`

* test(sessionscontroller): add tests for `SessionsController`

* test(jwttokenutils): add tests for `JwtTokenUtils`

* test(sessionsservice): add test for retrieval of no session data

* test: update jacoco version

* fix(tests): fix test maven configuration

* fix(devops): add publishing of code coverage results to sonarcloud

* fix(devops): fix jacoco report path

* fix: add src in kotlin-maven-plugin

* feat: add tests for validateSession

* feat: add tests for postToken

* feat: add unit test for allTokens

* test: mock `Mono.awaitSingleOrNull`

and hope that the SonarCloud deities give us 5% more coverage

* refactor(:)): move `@Autowired` from lateinit vars to fields

* test(sessionsservice): remove mocking of `Mono.awaitSingleOrNull`

Co-authored-by: Simone Infante <simone.infante@pagopa.it>

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<java.version>17</java.version>
 		<kotlin.version>1.6.21</kotlin.version>
 		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
-		<jacoco.version>0.8.7</jacoco.version>
+		<jacoco.version>0.8.8</jacoco.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -111,6 +111,12 @@
 			<artifactId>kotlinx-coroutines-reactor</artifactId>
 			<version>${kotlinx-coroutines.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-test</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
@@ -129,12 +135,14 @@
 				<configuration>
 					<args>
 						<arg>-Xjsr305=strict</arg>
+						<arg>-opt-in=kotlin.RequiresOptIn</arg>
 					</args>
 					<compilerPlugins>
 						<plugin>spring</plugin>
 					</compilerPlugins>
 					<sourceDirs>
 						<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/kotlin</sourceDir>
+						<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
 					</sourceDirs>
 				</configuration>
 				<dependencies>
@@ -144,6 +152,21 @@
 						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
+				<executions>
+					<execution>
+						<id>test-compile</id>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>test-compile</goal>
+						</goals>
+						<configuration>
+							<sourceDirs>
+								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+								<sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+							</sourceDirs>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.openapitools</groupId>
@@ -181,6 +204,11 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco.version}</version>
+				<configuration>
+                    <excludes>
+                        <exclude>it/pagopa/generated/**</exclude>
+                    </excludes>
+                </configuration>
 				<executions>
 					<execution>
 						<id>jacoco-initialize</id>
